<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/second_layer"
    tools:context=".PlumberTempSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@color/color1white">

        <TextView
            android:id="@+id/plumberservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/Plumber"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <!--Group 2-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/color1white"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/color1white"
                    android:textColor="@color/color1white">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Male"
                        android:textColor="@color/Black" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Female"
                        android:textColor="@color/Black" />

                </RadioGroup>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/Select"
                    android:textColor="@color/Black"
                    android:textSize="22dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="120dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="140dp"
                    android:layout_height="20dp" />




            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ApproxWT"
                    android:textColor="@color/color1white"
                    android:textSize="20dp" />


                <RadioGroup
                    android:id="@+id/waitingtime1"
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:background="@color/color1white"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color1white" >

                    <RadioButton
                        android:id="@+id/t301hour1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/t301hour"
                        android:textColor="@color/Black" />

                    <RadioButton
                        android:id="@+id/t12hour1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/t12hour"
                        android:textColor="@color/Black" />

                    <RadioButton
                        android:id="@+id/t22hour1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/t22hour"
                        android:textColor="@color/Black" />
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Date"
                    android:layout_margin="8dp"
                    android:textColor="@color/Black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00_00"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="150dp"
                    android:textColor="@color/Black" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color1white"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectTime"
                    android:textSize="20dp"
                    android:textColor="@color/Black"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/time1"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="150dp"
                    android:text="@string/_00_00_00"
                    android:textColor="@color/Black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/txtaddresss"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:background="@color/grey"
                    android:textColor="@color/Black"
                    android:textAlignment="gravity"
                    android:textColorHint="@color/Black"
                    android:hint="@string/prompt_address"
                    android:inputType="textPersonName" />
                <Button
                    android:id="@+id/perHireNow"
                    android:layout_width="340dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/bg_radius"
                    android:text="@string/Proceed"
                    android:textColor="#fff"
                    android:textSize="18dp" />



            </RelativeLayout>



        </LinearLayout>


    </ScrollView>


</LinearLayout>