<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color1white"
    tools:context=".WorkForOTS">



    <LinearLayout
        android:background="@color/grey"
        android:id="@+id/scroll_view"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workerform"
            android:textSize="30dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="80dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_above="@id/main_nav">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <android.support.design.widget.TextInputLayout

                    android:id="@+id/txt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    android:layout_marginTop="20dp">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email_address_hint" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password_hint" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:id="@+id/txt_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/gender" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout

                        android:id="@+id/txt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/address" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout

                        android:id="@+id/txt_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="4"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|number"
                            android:hint="@string/pincode" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="@string/mobile_no" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_workinghours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        android:layout_marginTop="20dp">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/working_hours" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Skills"
                        android:textSize="20dp"
                        android:layout_margin="8dp"
                        android:textStyle="normal" />

                    <RadioGroup
                        android:id="@+id/rg_skill"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey">

                        <RadioButton
                            android:id="@+id/rb_maid"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:text="@string/maid" />

                        <RadioButton
                            android:id="@+id/rb_elect"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:text="@string/electrician"/>
                        <RadioButton
                            android:id="@+id/rb_plumber"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/plumber" />

                        <RadioButton
                            android:id="@+id/rb_chef"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/chef"/>


                    </RadioGroup>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <Button
                        android:id="@+id/btn_hireperson"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/color1white"
                        android:background="@drawable/button_bg_rounded_corners"
                        android:textStyle="bold"
                        android:text="@string/hire_person"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/main_nav"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/color1white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />

</RelativeLayout>